Introduce inline bot helper

--- a/app.json
+++ b/app.json
@@ -158,6 +158,14 @@
       "description": "Display user for .term command",
       "value": "WeebProject",
       "required": false
+    },
+    "BOT_TOKEN": {
+      "description": "Set this to enable inline bot helper. get the token from @BotFather",
+      "required": false
+    },
+    "BOT_USERNAME": {
+      "description": "Username of the bot you created with @BotFather",
+      "required": false
     }
   },
   "addons": [
