Rebrand from WeebProject

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeebProject UserBot",
+  "name": "Cyber UserBot",
   "description": "[WeebProject] A modular Telegram userbot running on Python 3.8",
   "keywords": [
     "telegram",
@@ -8,7 +8,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/BianSepang/WeebProject",
+  "repository": "https://github.com/ythm00/Cyber",
   "website": "https://telegra.ph/How-to-host-a-Telegram-Userbot-11-02",
   "stack": "container",
   "env": {
@@ -44,7 +44,7 @@
     },
     "UPSTREAM_REPO_URL": {
       "description": "In case you maintain a fork, add your repo URL here.",
-      "value": "https://github.com/BianSepang/WeebProject",
+      "value": "https://github.com/ythm00/Cyber",
       "required": false
     },
     "COUNTRY": {
