--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_DB=weebproject
+      - POSTGRES_DB=cyber
       - POSTGRES_USER=USERNAME
       - POSTGRES_PASSWORD=PASSWORD
     ports: 
