--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "Cyber UserBot",
-  "description": "[WeebProject] A modular Telegram userbot running on Python 3.8",
+  "description": "[Cyber] A modular Telegram userbot running on Python 3.8",
+  "logo": "https://telegra.ph/file/97a72ff8c012185982776.jpg"
   "keywords": [
     "telegram",
     "userbot",
@@ -156,7 +157,7 @@
     },
     "TERM_ALIAS": {
       "description": "Display user for .term command",
-      "value": "WeebProject",
+      "value": "Cyber",
       "required": false
     },
     "BOT_TOKEN": {
