--- a/sample_config.env
+++ b/sample_config.env
@@ -68,6 +68,10 @@ G_DRIVE_DATA = ""
 G_DRIVE_FOLDER_ID = ""
 G_DRIVE_INDEX_URL = ""
 
+# Set this to enable inline bot helper. get the token from @BotFather
+BOT_TOKEN = ""
+BOT_USERNAME = ""
+
 # Last.fm
 # You have to have your own unique two values for API_KEY and API_SECRET
 # Obtain yours from https://www.last.fm/api/account/create for Last.fm
